<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/usernameWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/df_martin_bi"
        android:layout_marginRight="@dimen/df_martin_bi">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/usernameAcet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name_label"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameWrapper"
        android:layout_marginLeft="@dimen/df_martin_bi"
        android:layout_marginRight="@dimen/df_martin_bi"
        android:layout_marginTop="@dimen/df_martin">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/passwordAcet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_label"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordWrapper"
        android:layout_marginLeft="@dimen/df_martin_bi"
        android:layout_marginRight="@dimen/df_martin_bi"
        android:layout_marginTop="@dimen/df_martin"
        android:background="@color/vj_red_color"
        android:text="@string/login_label"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="@dimen/login_btn_text_size" />

    <TextView
        android:id="@+id/fogort_pass_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_btn"
        android:layout_marginLeft="@dimen/df_martin_bi"
        android:layout_marginRight="@dimen/df_martin_bi"
        android:layout_marginTop="@dimen/df_martin_bi"
        android:gravity="center_horizontal"
        android:text="@string/forgot_pass_label"
        android:textSize="@dimen/forgot_pass_text_size"
        android:textColor="@color/vj_red_color" />
</RelativeLayout>