<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_image"
    tools:context="vsec.com.yupax.ui.screen.login.activity.MerchantActivity">

    <ImageView
        android:id="@+id/logo_iv"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/logo_height"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/register_logo_image_martin_bottom"
        android:layout_marginTop="@dimen/logo_martin_top"
        android:src="@drawable/logo" />


    <TextView
        android:id="@+id/select_merchant_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_iv"
        android:layout_marginLeft="@dimen/df_martin_bi"
        android:layout_marginRight="@dimen/df_martin_bi"
        android:text="@string/select_merchant"
        android:textColor="@android:color/white"
        android:textSize="@dimen/select_merchant_text_size" />

    <RadioButton
        android:id="@+id/resun_rb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/select_merchant_tv"
        android:layout_marginLeft="@dimen/df_martin_bi"
        android:layout_marginRight="@dimen/df_martin_bi"
        android:layout_marginTop="@dimen/df_martin"
        android:buttonTint="@android:color/white"
        android:text="@string/resun_label"
        android:textColor="@android:color/white"
        android:textSize="@dimen/select_merchant_text_size" />

    <View
        android:id="@+id/sp1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/df_separate_height"
        android:layout_below="@id/resun_rb"
        android:layout_marginLeft="@dimen/df_martin_bi"
        android:layout_marginRight="@dimen/df_martin_bi"
        android:layout_marginTop="@dimen/df_martin"
        android:background="@android:color/white" />

    <RadioButton
        android:id="@+id/vj_rb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sp1"
        android:layout_marginLeft="@dimen/df_martin_bi"
        android:layout_marginRight="@dimen/df_martin_bi"
        android:layout_marginTop="@dimen/df_martin"
        android:buttonTint="@android:color/white"
        android:shadowColor="@android:color/white"
        android:text="@string/vietjet_label"
        android:textColor="@android:color/white"
        android:textSize="@dimen/select_merchant_text_size" />

    <View
        android:id="@+id/sp2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/df_separate_height"
        android:layout_below="@id/vj_rb"
        android:layout_marginLeft="@dimen/df_martin_bi"
        android:layout_marginRight="@dimen/df_martin_bi"
        android:layout_marginTop="@dimen/df_martin"
        android:background="@android:color/white" />

    <RadioButton
        android:id="@+id/yupax_rb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sp2"
        android:layout_marginLeft="@dimen/df_martin_bi"
        android:layout_marginRight="@dimen/df_martin_bi"
        android:layout_marginTop="@dimen/df_martin"
        android:buttonTint="@android:color/white"
        android:shadowColor="@android:color/white"
        android:text="@string/yupax_label"
        android:textColor="@android:color/white"
        android:textSize="@dimen/select_merchant_text_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/df_separate_height"
        android:layout_below="@id/yupax_rb"
        android:layout_marginLeft="@dimen/df_martin_bi"
        android:layout_marginRight="@dimen/df_martin_bi"
        android:layout_marginTop="@dimen/df_martin"
        android:background="@android:color/white" />

</RelativeLayout>
