<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fg_bg_color"
    tools:context="vsec.com.yupax.ui.activity.home.ChangePasswordActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_height"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="top"
        android:background="@color/vj_red_color"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/actionbar_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/change_password_info"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="@dimen/actionbar_title_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/back_tv"
                android:layout_width="@dimen/actionbar_back_tv_width"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:gravity="center"
                android:text="@string/ico_back"
                android:textColor="@android:color/white"
                android:textSize="@dimen/actionbar_back_text_size" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>


    <RelativeLayout
        android:id="@+id/current_password_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="@dimen/df_martin"
        android:background="@android:color/white">


        <ImageView
            android:id="@+id/password_icon"
            android:layout_width="@dimen/profile_icon_size"
            android:layout_height="@dimen/profile_icon_size"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/df_martin"
            android:paddingBottom="@dimen/df_martin_sm"
            android:paddingTop="@dimen/df_martin_sm"
            android:src="@drawable/icon_password" />

        <EditText
            android:id="@+id/current_password_edt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/df_edt_height"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/df_martin"
            android:layout_toRightOf="@id/password_icon"
            android:background="@android:color/transparent"
            android:ellipsize="end"
            android:hint="@string/password_hint_text"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="@dimen/df_text_size" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/new_password_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/current_password_wrapper"
        android:layout_marginTop="@dimen/df_martin_bi"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/user_icon"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/df_martin"
            android:paddingBottom="@dimen/df_martin_sm"
            android:paddingTop="@dimen/df_martin_sm"
            android:src="@drawable/icon_password" />

        <EditText
            android:id="@+id/new_password_edt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/df_edt_height"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/df_martin"
            android:layout_toRightOf="@id/user_icon"
            android:background="@android:color/transparent"
            android:ellipsize="end"
            android:hint="@string/new_password_hint"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="@dimen/df_text_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/df_separate_height"
            android:layout_below="@id/user_icon"
            android:layout_marginLeft="@dimen/df_martin"
            android:layout_toRightOf="@id/user_icon"
            android:background="@color/separate_color" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/re_new_password_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_password_wrapper"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/re_password_icon"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/df_martin"
            android:paddingBottom="@dimen/df_martin_sm"
            android:paddingTop="@dimen/df_martin_sm"
            android:src="@drawable/icon_password" />

        <EditText
            android:id="@+id/re_new_password_edt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/df_edt_height"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/df_martin"
            android:layout_toRightOf="@id/re_password_icon"
            android:background="@android:color/transparent"
            android:ellipsize="end"
            android:hint="@string/re_new_password_hint"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="@dimen/df_text_size" />
    </RelativeLayout>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/change_password_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/re_new_password_wrapper"
        android:layout_marginLeft="@dimen/df_martin_bi"
        android:layout_marginRight="@dimen/df_martin_bi"
        android:layout_marginTop="@dimen/df_martin_bi"
        android:background="@drawable/btn_border"
        android:text="@string/done_label"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="@dimen/login_btn_text_size" />


</RelativeLayout>
